--- a/clubedolivro-aniversario/index.html
+++ b/clubedolivro-aniversario/index.html
@@ -37,7 +37,7 @@
             <article class="book" data-id="estrangeiro" data-category="filosofia">
                 <h3>
                     <a 
-                        href="https://www.amazon.com.br/estrangeiro-Albert-Camus/dp/8501014869/ref=sr_1_1?crid=2MM4N5Q72OYYU&dib=eyJ2IjoiMSJ9.HXdqeBk7Sf9jy3loHrIJFHxNGOc6NHLZx-H7UCvWkW655mzME15jN1QteiKfImw9PWH3uDabFeU1b9HDA7cWuLJfLdvta1QZt7cDNbg-AIagt9Aa78j84fjHSX20RZirc14QhbbP0OLfnxThTwZ426VAildTbR-9Xm-v00rg1RC60xerPfX3TUl09YXL1HG10qczVhUsQ_tIsWjDCZJ47A-awbr0oqCxZkl9Hdm_9htaGTl2-SFsObEzTTdI0a8iDtjUN5kKdAaAk08_w7VllhhAdhCB3cXoIo2K_BU839E.2h-51MImyEz7avzQYlSuu5evo7ljDzBlZYLwOmFmmUQ&dib_tag=se&keywords=o+estrangeiro+albert+camus&qid=1769707191&sprefix=o+estra%2Caps%2C367&sr=8-1" 
+                        href="https://abre.ai/oDgA" 
                         target="_blank" 
                         rel="noopener noreferrer"
                         >
@@ -46,6 +46,44 @@
                 </h3>
 
                 <p class="author">Autor: Albert Camus</p>
+                <p class="category">Categoria: Filosofia</p>
+
+                <button class="select-book">
+                    Escolher este livro
+                </button>
+            </article>
+
+            <article class="book" data-id="biblioteca" data-category="romance">
+                <h3>
+                    <a 
+                        href="https://abre.ai/oDgb" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        >
+                        A Biblioteca da Meia-Noite
+                    </a>
+                </h3>
+
+                <p class="author">Autor: Matt Haig</p>
+                <p class="category">Categoria: Romance</p>
+
+                <button class="select-book">
+                    Escolher este livro
+                </button>
+            </article>
+
+            <article class="book" data-id="republica" data-category="filosofia">
+                <h3>
+                    <a 
+                        href="https://abre.ai/oDgJ" 
+                        target="_blank" 
+                        rel="noopener noreferrer"
+                        >
+                        A República
+                    </a>
+                </h3>
+
+                <p class="author">Autor: Platão</p>
                 <p class="category">Categoria: Filosofia</p>
 
                 <button class="select-book">
