linkando o html com css e pequenas mudanças

--- a/clubedolivro-aniversario/index.html
+++ b/clubedolivro-aniversario/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clube do Livro</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
     <h1>Clube do Livro</h1>
-    <p>Aniversário do Henzo</p>
+    <p>Escolha um livro para me presentear</p>
     </header>
     <main>
 
