estilização, adição de informações e implementações no html

--- a/clubedolivro-aniversario/index.html
+++ b/clubedolivro-aniversario/index.html
@@ -43,6 +43,10 @@
                 <h3>Filosofia</h3>
 
             <article class="book" data-id="estrangeiro" data-category="filosofia">
+
+                <img src="imagens/estranegeiro.jpg" alt="Capa do livro O Estrangeiro" class="book-cover">
+
+                <div class="book-info">
                 <h3>
                     <a href="https://abre.ai/oDgA" target="_blank" rel="noopener noreferrer">O Estrangeiro</a>
                 </h3>
@@ -50,12 +54,18 @@
                 <p class="author">Autor: Albert Camus</p>
                 <p class="category">Categoria: Filosofia</p>
 
-                <button class="select-book">
-                    Escolher este livro
-                </button>
+                <p class="description">Mais conhecida e importante obra de ficção de Albert Camus, vencedor do Prêmio Nobel de Literatura. Com a emoção de um thriller perfeitamente executado e a força de uma parábola, O Estrangeiro  é a obra de destaque de um dos escritores mais engajados e respeitados do século.</p>
+
+                <button class="select-book">Escolher este livro</button>
+                </div>
+
             </article>
 
             <article class="book" data-id="republica" data-category="filosofia">
+
+                <img src="imagens/republica.jpg" alt="Capa do livro A República" class="book-cover">
+
+                <div class="book-info">
                 <h3>
                     <a href="https://abre.ai/oDgJ" target="_blank" rel="noopener noreferrer">A República</a>
                 </h3>
@@ -63,9 +73,11 @@
                 <p class="author">Autor: Platão</p>
                 <p class="category">Categoria: Filosofia</p>
 
-                <button class="select-book">
-                    Escolher este livro
-                </button>
+                <p class="description">A República é a obra mais importante de Platão filósofo grego que vivem entre os séculos V e IV antes de Cristo. De caráter político, prega um Estado ideal governado por líderes justos, sábios e instruídos.</p>
+
+                <button class="select-book">Escolher este livro</button>
+                </div>
+
             </article>
             </section>
 
@@ -74,20 +86,27 @@
                 <h3>Romance</h3>
 
                 <article class="book" data-id="biblioteca" data-category="romance">
+
+                <img src="imagens/biblioteca.jpg" alt="Capa do livro A Biblioteca da Meia-Noite" class="book-cover">
+
+                <div class="book-info">
                 <h3>
-                    <a href="https://abre.ai/oDgb" target="_blank" rel="noopener noreferrer">A Biblioteca da Meia-Noite</a>
+                    <a href="https://abre.ai/oDgB" target="_blank" rel="noopener noreferrer">A Biblioteca da Meia-Noite</a>
                 </h3>
 
                 <p class="author">Autor: Matt Haig</p>
                 <p class="category">Categoria: Romance</p>
+                <p class="description">A Biblioteca da Meia-Noite é um romance incrível que fala dos infinitos rumos que a vida pode tomar e da busca incessante pelo rumo certo.</p>
 
-                <button class="select-book">
-                    Escolher este livro
-                </button>
+                <button class="select-book">Escolher este livro</button>
+                </div>
+
             </article>
             </section>
+
         </section>
     </main>
+
 <script src="script.js"></script>
 </body>
 </html>
